[ADD] 코드 컨벤션 최적화